# EarthGRAM2016-Matlab-Wrapper

./: .gitignore  CMakeLists.txt  README.md  build.m  get_atm_density.m  mex_wrapper.cpp  test.m
